src/test/ui/parser/new-unicode-escapes-3.stderr
error: invalid unicode character escape
  --> $DIR/new-unicode-escapes-3.rs:2:15
   |
LL |     let s1 = "\u{d805}";
   |               ^^^^^^^^
   |
   = help: unicode escape must not be a surrogate

error: invalid unicode character escape
  --> $DIR/new-unicode-escapes-3.rs:3:15
   |
LL |     let s2 = "\u{ffffff}";
   |               ^^^^^^^^^^
   |
   = help: unicode escape must be at most 10FFFF

error: aborting due to 2 previous errors

